--- a/css/cs_style.css
+++ b/css/cs_style.css
@@ -171,6 +171,7 @@ header .icon-o span{
 #icon2{
   color: rgb(255, 60, 50);
 }
+
 #icon3{
   color: rgb(251, 169, 5);
 }
@@ -271,12 +272,38 @@ header .icon-o span{
   text-rendering: geometricPrecision;
   border-radius: 25px;
 }
-
-
-/* NOTE: contenedor 5 */
+/*-----------NOTE: marcas etc---------*/
 .contenedor_5{
-  height: 70vh;
+  padding: 75px 8%;
 }
+.contenedor_5 h1{
+  text-align: center;
+  text-rendering: geometricPrecision;
+  font-family: 'Montserrat', sans-  serif;
+  letter-spacing: 2px;
+  word-spacing: 2px;
+  font-size: 1em;
+}
+.contenedor_5 .icosvg{
+  padding: 25px 10% 0 10%;
+  display: grid;
+  grid-template-columns: 250px 250px 1fr 1fr;
+  grid-gap: 10px;
+}
+.contenedor_5 .icosvg i{
+  text-align: center;
+  font-size: 10em;
+  color: #555;
+}
+.contenedor_5 .icosvg i:hover{
+  color: black;
+}
+#ba1, #ba2{
+  font-size: 6em;
+  padding-top: 30px;
+}
+
+
 
 /* RESPONSIVE
    ========================================================================= /
@@ -415,10 +442,6 @@ header .icon-o span{
     padding-left: 10%;
     padding-right: 10%;
   }
-
-
-
-
 
 
   /* ---------------NOTE: contenedor 4-------------- */
@@ -595,6 +618,38 @@ header .icon-o span{
   .ptr4 a{
     font-size: .8em;
   }
+
+  /*-----------NOTE: marcas etc---------*/
+  .contenedor_5{
+    padding: 75px 8%;
+  }
+  .contenedor_5 h1{
+    text-align: center;
+    text-rendering: geometricPrecision;
+    font-family: 'Montserrat', sans-  serif;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    font-size: 1em;
+  }
+  .contenedor_5 .icosvg{
+    padding: 25px 10% 0 10%;
+    display: grid;
+    grid-template-columns: 250px 250px 1fr 1fr;
+    grid-gap: 10px;
+  }
+  .contenedor_5 .icosvg i{
+    text-align: center;
+    font-size: 10em;
+    color: #555;
+  }
+  .contenedor_5 .icosvg i:hover{
+    color: black;
+  }
+  #ba1, #ba2{
+    font-size: 6em;
+    padding-top: 30px;
+  }
+
 
 
 }
