--- a/css/cs_style.css
+++ b/css/cs_style.css
@@ -287,19 +287,20 @@ header .icon-o span{
 .contenedor_5 .icosvg{
   padding: 25px 10% 0 10%;
   display: grid;
-  grid-template-columns: 250px 250px 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(2, 90px);
   grid-gap: 10px;
 }
 .contenedor_5 .icosvg i{
   text-align: center;
-  font-size: 10em;
+  font-size: 7em;
   color: #555;
 }
 .contenedor_5 .icosvg i:hover{
   color: black;
 }
 #ba1, #ba2{
-  font-size: 6em;
+  font-size: 4em;
   padding-top: 30px;
 }
 
@@ -447,6 +448,28 @@ header .icon-o span{
   /* ---------------NOTE: contenedor 4-------------- */
   .contenedor_4 h1{
     font-size: 1.8em;
+  }
+
+  /*-----------NOTE: marcas etc---------*/
+  .contenedor_5{
+    padding: 75px 8%;
+  }
+  .contenedor_5 h1{
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    font-size: 1em;
+  }
+  .contenedor_5 .icosvg{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, 125px);
+  }
+  .contenedor_5 .icosvg i{
+    font-size: 7em;
+  }
+  #ba1, #ba2{
+    font-size: 4em;
+    padding-top: 30px;
   }
 
 
@@ -624,26 +647,16 @@ header .icon-o span{
     padding: 75px 8%;
   }
   .contenedor_5 h1{
-    text-align: center;
-    text-rendering: geometricPrecision;
-    font-family: 'Montserrat', sans-  serif;
     letter-spacing: 2px;
     word-spacing: 2px;
     font-size: 1em;
   }
   .contenedor_5 .icosvg{
-    padding: 25px 10% 0 10%;
     display: grid;
-    grid-template-columns: 250px 250px 1fr 1fr;
-    grid-gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
   .contenedor_5 .icosvg i{
-    text-align: center;
     font-size: 10em;
-    color: #555;
-  }
-  .contenedor_5 .icosvg i:hover{
-    color: black;
   }
   #ba1, #ba2{
     font-size: 6em;
