--- a/css/cs_style.css
+++ b/css/cs_style.css
@@ -90,7 +90,8 @@ header .icon-o span{
 }
 .contenedor_0 .titles h1{
   color: white;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: lighter;
   letter-spacing: 0px;
   text-rendering: geometricPrecision;
   font-size: 1.9em;
@@ -417,7 +418,8 @@ header .icon-o span{
   }
   .contenedor_0 .titles h1{
     color: white;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: lighter;
     letter-spacing: 1px;
     text-rendering: geometricPrecision;
     font-size: 2.3em;
@@ -598,7 +600,8 @@ header .icon-o span{
   }
   .contenedor_0 .titles h1{
     color: white;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: lighter;
     letter-spacing: 1px;
     text-rendering: geometricPrecision;
     font-size: 3.2em;
