--- a/css/cs_style.css
+++ b/css/cs_style.css
@@ -322,17 +322,17 @@ header .icon-o span{
 }
 .contenedor_8 .head{
   background-color: rgb(231, 231, 231);
-  height: 30px;
+  height: 25px;
   padding-left: 5px;
-  padding-top: 8px;
+  padding-top: 4px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
 .contenedor_8 .head span{
   border-radius: 200px;
   display: inline-block;
-  height: 15px;
-  width: 15px;
+  height: 10px;
+  width: 10px;
   margin-left: 3px;
 }
 #btn1{
@@ -346,7 +346,7 @@ header .icon-o span{
 }
 .contenedor_8 .bash{
   background-color: rgb(24, 24, 24);
-  padding: 20px 5px 300px 10px;
+  padding: 20px 5px 200px 10px;
   font-family: 'Quicksand', sans-serif;
   color: rgb(115, 210, 22);
   display: flex;
@@ -547,6 +547,44 @@ header .icon-o span{
     font-size: 4em;
     padding-top: 30px;
   }
+
+
+  /*----------NOTE: consola------------*/
+  .contenedor_8{
+    padding-left: 15%;
+    padding-right: 15%;
+  }
+  .contenedor_8 h1{
+    font-family: 'Quicksand', sans-serif;
+    text-align: center;
+    padding-bottom: 30px;
+  }
+  .contenedor_8 .head{
+    background-color: rgb(231, 231, 231);
+    height: 30px;
+    padding-left: 5px;
+    padding-top: 8px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+  .contenedor_8 .head span{
+    border-radius: 200px;
+    display: inline-block;
+    height: 15px;
+    width: 15px;
+    margin-left: 3px;
+  }
+  .contenedor_8 .bash{
+    background-color: rgb(24, 24, 24);
+    padding: 20px 5px 300px 10px;
+    font-family: 'Quicksand', sans-serif;
+    color: rgb(115, 210, 22);
+    display: flex;
+    font-size: 2.5em;
+  }
+
+
+
 
   /*-------- NOTE: contenedor ------------*/
 .contenedor_7{
