--- a/css/we.css
+++ b/css/we.css
@@ -84,7 +84,7 @@ header .icon-o span{
 }
 .contenedor_0 .titles{
     align-items: center;
-    padding-top: 35vh;
+    padding-top: 48vh;
     padding-right: 20%;
 }
 .contenedor_0 .titles h1{
@@ -204,143 +204,106 @@ header .icon-o span{
     padding-left: 10%;
     padding-right: 10%;
 }
-
-/*-----------NOTE: slide----------*/
-.contenedor_5{
-    height: 360px;
-    background-color: white;
-    position: relative;
-    overflow: hidden;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-flow: row nowrap;
-        -ms-flex-flow: row nowrap;
-            flex-flow: row nowrap;
-    -webkit-box-align: end;
-    -webkit-align-items: flex-end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-}
-.contenedor_5 .slider__nav {
-    width: 12px;
-    height: 12px;
-    margin: 2rem 12px;
-    border-radius: 50%;
-    z-index: 10;
-    outline: 6px solid #ccc;
-    outline-offset: -6px;
-    box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
-    cursor: pointer;
-    -webkit-appearance: none;
-       -moz-appearance: none;
-            appearance: none;
-    -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
-}
-.contenedor_5 .slider__nav:checked {
-    -webkit-animation: check 0.4s linear forwards;
-            animation: check 0.4s linear forwards;
-}
-.contenedor_5 .slider__nav:checked:nth-of-type(1) ~ .slider__inner {
-    left: 0%;
-}
-.contenedor_5 .slider__nav:checked:nth-of-type(2) ~ .slider__inner {
-    left: -100%;
-}
-.contenedor_5 .slider__nav:checked:nth-of-type(3) ~ .slider__inner {
-    left: -200%;
-}
-.contenedor_5 .slider__nav:checked:nth-of-type(4) ~ .slider__inner {
-    left: -300%;
-}
-.contenedor_5 .slider__inner {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 400%;
-    height: 100%;
-    -webkit-transition: left 0.4s;
-    transition: left 0.4s;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-flow: row nowrap;
-        -ms-flex-flow: row nowrap;
-            flex-flow: row nowrap;
-}
-.contenedor_5 .slider__contents {
-    height: 100%;
-    padding: 2rem;
+/*-----------NOTE:consola y texto------------*/
+.contenedor_3{
     text-align: center;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-    -webkit-flex-flow: column nowrap;
-        -ms-flex-flow: column nowrap;
-            flex-flow: column nowrap;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
 }
-.contenedor_5 i{
-    font-size: 2em;
-}
-.contenedor_5 .s_capt {
-    font-weight: 500;
-    font-size: 2em;
-    margin: 5px 0 5px;
-    text-rendering: optimizeLegibility;
+.contenedor_3 h1{
+    font-weight: lighter;
+    letter-spacing: 1px;
+    word-spacing: 2px;
     font-family: 'NTR', sans-serif;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-    text-transform: uppercase;
+    text-rendering: geometricPrecision;
+    font-size: 2.1em;
 }
-.contenedor_5 .s_text {
-    color: #555;
-    width: 90%;
-    letter-spacing: 2px; word-spacing: 2px;
-    text-rendering: optimizeLegibility;
+.contenedor_3 .image{
+    padding: 0 4%;
+}
+.contenedor_3 .image img{
+    width: 90vw;
+}
+
+
+
+/*-----------NOTE: img y texto--------------*/
+.contenedor_4{
+    text-align: center;
+}
+.contenedor_4 #texto{
+    padding: 20px 8% 70px;
+}
+.contenedor_4 #texto h1{
+    padding-bottom: 4px;
+    font-family: 'NTR', sans-serif;
+    text-rendering: geometricPrecision;
+    font-size: 2.1em;
+    font-weight: lighter;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+}
+.contenedor_4 #texto p{
+    font-size: 1.1em;
     font-family: 'Quicksand', sans-serif;
-    margin-bottom: 8rem;
-}  
-@-webkit-keyframes check {
-    50% {
-      outline-color: #333;
-      box-shadow: 0 0 0 12px #333, 0 0 0 36px rgba(51, 51, 51, 0.2);
-    }
-    100% {
-      outline-color: #333;
-      box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
-    }
-  }
-  
-@keyframes check {
-    50% {
-      outline-color: #333;
-      box-shadow: 0 0 0 12px #333, 0 0 0 36px rgba(51, 51, 51, 0.2);
-    }
-    100% {
-      outline-color: #333;
-      box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
-    }
+    text-rendering: geometricPrecision;
+    font-weight: lighter;
+    letter-spacing: 2px;
+    color: rgb(107, 107, 107);
+    word-spacing: 2px;
 }
-  
+.contenedor_4 #imagen{
+    height: 50vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #333;
+    /*background-attachment: fixed;*/
+    background-image: url(../jpg/bo1.jpg);
+}
+
+/*-----------NOTE:bloques v:--------------*/
+.contenedor_5{
+    padding: 20px 0;
+    padding: 0 4%;
+}
+.contenedor_5 h1{
+    text-align: center;
+    padding-bottom: 4px;
+    font-family: 'NTR', sans-serif;
+    text-rendering: geometricPrecision;
+    font-size: 2.1em;
+    font-weight: lighter;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+}
+.contenedor_5 .boxes .box{
+    padding: 0 2%;
+    border: 1px solid rgb(222, 222, 222);
+    border-radius: 5px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+}
+.contenedor_5 .boxes .box span{
+    font-size: 7em;
+    padding-right: 20px;
+}
+.contenedor_5 .boxes .box h2{
+    font-family: 'NTR', sans-serif;
+    text-rendering: geometricPrecision;
+    font-weight: lighter;
+}
+.contenedor_5 .boxes .box p{
+    font-family: 'Quicksand', sans-serif;
+    text-rendering: geometricPrecision;
+    font-weight: lighter;
+    letter-spacing: 2px;
+    color: rgb(107, 107, 107);
+    padding-bottom: 15px;
+}
+.contenedor_5 .boxes #uno, .contenedor_5 .boxes #dos, .contenedor_5 .boxes #tres, .contenedor_5 .boxes #cuatro, .contenedor_5 .boxes #cinco{
+    font-size: 3.5em;
+}
+
 /* RESPONSIVE
    ========================================================================= // Móviles en horizontal o tablets en vertical
    ------------------------------------------------------------------------- */
@@ -372,7 +335,7 @@ header .icon-o span{
         align-items: center;
         padding-left: 5%;
         padding-right: 25%;
-        padding-top: 35vh;
+        padding-top: 45vh;
     }
     .contenedor_0 .titles h1{
         color: white;
@@ -411,20 +374,14 @@ header .icon-o span{
     }
 
 
+    /*-----------NOTE:consola y texto------------*/
+    .contenedor_3 .image{
+        padding: 0 8%;
+    }
+    .contenedor_3 .image img{
+        width: 70vw;
+    }
 
-
-
-  /* ----------------------NOTE: Slider textos---------------------- */
-  .contenedor_5{
-    height: 330px;
-  }
-  .contenedor_5 i{
-    font-size: 2.7em;
-  }
-  .contenedor_5 .s_text {
-    color: #555;
-    width: 50%;
-  }
 
 
 
@@ -456,7 +413,7 @@ header .icon-o span{
         align-items: center;
         padding-left: 8%;
         padding-right: 40%;
-        padding-top: 35vh;
+        padding-top: 40vh;
     }
     .contenedor_0 .titles h1{
         color: white;
@@ -528,25 +485,42 @@ header .icon-o span{
         padding-top: 70px;
     }
 
+    /*-----------NOTE:consola y texto------------*/
+    .contenedor_3 .image{
+        padding: 0 4% 50px;
+    }
+    .contenedor_3 .image img{
+        width: 600px;
+    }
+    /*-----------NOTE: img y texto--------------*/
+    .contenedor_4{
+        display: grid;
+        grid-template-columns: 1fr 40%;
+        grid-template-rows: 500px;
+    }
+    .contenedor_4 #texto{
+        padding: 25% 10% 0%;
+    }
+    .contenedor_4 #imagen{
+        height: 500px;
+        background-size: cover;
+        background-color: #333;
+        background-image: url(../jpg/bo1.jpg);
+    }
+
+    /*-----------NOTE:bloques v:--------------*/
+    .contenedor_5{
+        padding: 45px 4%;
+    }
+    .contenedor_5 h1{
+    }
+    .contenedor_5 .boxes{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-gap: 10px;
+    }
 
 
-
-
- /* ----------------------NOTE: Slider textos---------------------- */
- .contenedor_5{
-    height: 270px;
-  }
-  .contenedor_5 i{
-    font-size: 2.7em;
-  }
-  .contenedor_5 .s_capt {
-    text-rendering: optimizeLegibility;
-    text-transform: uppercase;
-  }
-  .contenedor_5 .s_text {
-    text-rendering: optimizeLegibility;
-    margin-bottom: 3rem;
-  }
 
 }
 
@@ -602,6 +576,11 @@ header .icon-o span{
     /*---------NOTE: iconos rotate y texto------*/
     .contenedor_2{
         padding: 0 10% 30px 10%;
+    }
+
+    /*-----------NOTE:bloques v:--------------*/
+    .contenedor_5{
+        padding: 45px 15%;
     }
 }
 
