--- a/css/cs_style.css
+++ b/css/cs_style.css
@@ -94,11 +94,13 @@ header .icon-o span{
   font-weight: lighter;
   letter-spacing: 0px;
   text-rendering: geometricPrecision;
-  font-size: 1.9em;
+  font-size: 1.7em;
   font-weight: 100;
 }
 .contenedor_0 .text{
-  padding-top: 15px;
+  padding-top: 13px;
+  padding-left: 0%;
+  padding-right: 25%;
   padding-bottom: 25px;
 }
 .contenedor_0 .text h3{
@@ -108,7 +110,7 @@ header .icon-o span{
   text-rendering: geometricPrecision;
   font-size: 0.8em;
   font-weight: 100;
-  color: rgb(205, 205, 205);
+  color: rgb(245,245,245);
 }
 .contenedor_0 a{
   color: white;
@@ -139,6 +141,8 @@ header .icon-o span{
 .contenedor_1 h1{
   padding-top: 100px;
   padding-bottom: 18px;
+  padding-left: 3%;
+  padding-right: 3%;
   font-family: 'Montserrat', sans-serif;
   text-rendering: geometricPrecision;
 }
@@ -422,12 +426,14 @@ header .icon-o span{
     font-weight: lighter;
     letter-spacing: 1px;
     text-rendering: geometricPrecision;
-    font-size: 2.3em;
+    font-size: 2.1em;
     font-weight: 100;
   }
   .contenedor_0 .text{
-    padding-top: 15px;
+    padding-top: 10px;
+    /*padding-left: 5%;*/  
     padding-left: 5%;
+    padding-right: 25%;
     padding-bottom: 25px;
   }
   .contenedor_0 .text h3{
@@ -436,7 +442,6 @@ header .icon-o span{
     text-rendering: geometricPrecision;
     font-size: 0.9em;
     font-weight: 100;
-    color: rgb(205, 205, 205);
   }
   .contenedor_0 a{
     margin-left: 5%;
@@ -642,13 +647,15 @@ header .icon-o span{
     font-weight: lighter;
     letter-spacing: 1px;
     text-rendering: geometricPrecision;
-    font-size: 3.2em;
+    font-size: 2.9em;
     font-weight: 100;
   }
   .contenedor_0 .text{
     text-align: inherit;
-    padding-top: 15px;
+    padding-top: 13px;
+    /*padding-left: 8%;*/
     padding-left: 8%;
+    padding-right: 25%;
     padding-bottom: 25px;
   }
   .contenedor_0 .text h3{
@@ -657,7 +664,6 @@ header .icon-o span{
     text-rendering: geometricPrecision;
     font-size: 1.2em;
     font-weight: 100;
-    color: rgb(205, 205, 205);
   }
   .contenedor_0 a{
     margin-left: 8%;
@@ -828,7 +834,9 @@ header .icon-o span{
   header .icon-o{
     padding-top: 10px;
   }
-
+  .contenedor_0 .titles h1{
+    font-size: 3.1em;
+  }
 
   /*------------ NOTE: division 2 ------------ */
   /*grid-template-columns: repeat(3, 1fr
