--- a/css/cont.css
+++ b/css/cont.css
@@ -66,7 +66,7 @@
   border: 1px solid #999999;
   /*padding: 10px;*/  padding: 10px 8px 10px 8px;
   text-rendering:  geometricPrecision;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: .85em;
   width: 100%;
   border-radius: 3px;
@@ -76,10 +76,10 @@
   /*background: #f2f2f2;*/
 }
 .contenedor_con .contenedor_form .acciones input:hover{
-  border: 1px solid rgb(0, 133, 255);
+  border: 1px solid #ee0979;
 }
 .contenedor_con .contenedor_form .acciones input:focus{
-  border: 1px solid rgb(0, 133, 255);
+  border: 1px solid #ee0979;
 }
 .contenedor_con .contenedor_form .acciones textarea{
   resize: none;
@@ -89,45 +89,46 @@
   box-sizing: border-box;
   border: 1px solid #999999;
   text-rendering:  geometricPrecision;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   padding: 10px 8px 10px 8px;
   margin: 0 0 20px;
   outline: none;
   /*background: #f2f2f2;*/
 }
 .contenedor_con .contenedor_form .acciones textarea:hover{
-  border: 1px solid rgb(0, 133, 255);
+  border: 1px solid #ee0979;
 }
 .contenedor_con .contenedor_form .acciones textarea:focus{
-  border: 1px solid rgb(0, 133, 255);
+  border: 1px solid #ee0979;
 }
 .contenedor_1 .contenedor_1 buton, textarea, input[type="text"], select {
     outline: none;
 }
 .contenedor_con .contenedor_form #boton{
-  width: 55%;
+  width: 40%;
   padding: 15px;
   background-color: white;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-rendering: geometricPrecision;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 0.9em;
   text-transform: uppercase;
-  border: 1px solid black;
+  border: 2px solid black;
   cursor: pointer;
   color: black;
   border-radius: 25px;
   font-style: 700;
     outline:none;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s;
 }
 .contenedor_con .contenedor_form #boton:hover{
-  background-color: rgb(0, 133, 255);
+  /*background-image:linear-gradient(to left, #ee0979, #ff6a00);*/
+  background-color: black;
   color: white;
-  border-color: rgb(0, 133, 255);
+  border-color: black;
 }
 .contenedor_con .contenedor_form h1{
   text-transform: uppercase;
@@ -137,8 +138,8 @@
   color: black;
   letter-spacing: 1px;
   text-rendering: optimizeLegibility;
-  font-family: 'NTR', sans-serif;
-  font-weight: lighter;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
 }
 
 /* RESPONSIVE
