--- a/css/cs_style.css
+++ b/css/cs_style.css
@@ -1,5 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat|NTR|Pacifico|Quicksand|Roboto');
+@import url('https://fonts.googleapis.com/css?family=Pacifico|Roboto:100,300,400,500,700'); 
+
 /*
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Pacifico', cursive;
+   
+ *
+ *
+ *
+ * @import url('https://fonts.googleapis.com/css?family=Montserrat|NTR|Pacifico|Quicksand|Roboto');
   font-family: 'NTR', sans-serif;
   font-family: 'Roboto', sans-serif;
   font-family: 'Montserrat', sans-serif;
@@ -12,6 +20,7 @@
     list-style: none;
     text-decoration: none;
     outline: none;
+    text-rendering: optimizeLegibility;
 }
 *:before, *:after {
   box-sizing: border-box;
@@ -38,14 +47,12 @@ header .logofixed{
   padding-left: 3%;
   text-transform: capitalize;
   color: white;
-  text-rendering: optimizeLegibility;
   letter-spacing: 2px;
   -webkit-transition: all 0.02s;
   -moz-transition: all 0.02s;
   transition: all 0.02s;
 }
 head .logofixed h1{
-
   -webkit-transition: all 0.06s;
   -moz-transition: all 0.06s;
   transition: all 0.06s;
@@ -63,7 +70,6 @@ header .icon-o span{
   cursor: pointer;
   font-size: 2em;
   padding: 15px 15px 10px 15px;
-  text-rendering: optimizeLegibility;
 }
 .shrink .logofixed h1{
   font-size: 1.9em;
@@ -90,12 +96,10 @@ header .icon-o span{
 }
 .contenedor_0 .titles h1{
   color: white;
-  font-family: 'Quicksand', sans-serif;
-  font-weight: lighter;
-  letter-spacing: 0px;
-  text-rendering: geometricPrecision;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300; 
+  letter-spacing: 1px;
   font-size: 1.7em;
-  font-weight: 100;
 }
 .contenedor_0 .text{
   padding-top: 13px;
@@ -104,19 +108,17 @@ header .icon-o span{
   padding-bottom: 25px;
 }
 .contenedor_0 .text h3{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   letter-spacing: 1px;
   word-spacing: 2px;
-  text-rendering: geometricPrecision;
-  font-size: 0.8em;
-  font-weight: 100;
+  font-size: 0.7em;
   color: rgb(245,245,245);
 }
 .contenedor_0 a{
   color: white;
   font-size: 0.8em;
-  font-family: 'Montserrat', sans-serif;
-  text-rendering: geometricPrecision;
+  font-family: 'Roboto', sans-serif;
   letter-spacing: 2px;
 }
 .contenedor_0 a span{
@@ -126,8 +128,7 @@ header .icon-o span{
   padding: 10px 10px;
   margin-right: 5px;
   font-size: 0.8em;
-  font-family: 'Montserrat', sans-serif;
-  text-rendering: geometricPrecision;
+  font-family: 'Roboto', sans-serif;
   letter-spacing: 2px;
 }
 .contenedor_0 a span:hover{
@@ -143,16 +144,15 @@ header .icon-o span{
   padding-bottom: 18px;
   padding-left: 3%;
   padding-right: 3%;
-  font-family: 'Montserrat', sans-serif;
-  text-rendering: geometricPrecision;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
 }
 .contenedor_1 p{
-  font-family: 'Montserrat', sans-serif;
-  text-rendering: geometricPrecision;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   color: rgb(107, 107, 107);
   padding-left: 4%;
   font-size: 1em;
-  font-weight: lighter;
   padding-right: 4%;
   letter-spacing: 1px;
   word-spacing: 2px;
@@ -183,18 +183,17 @@ header .icon-o span{
   font-size: 3em;
 }
 .contenedor_2 .text h2{
-  text-rendering: optimizeLegibility;
-  font-family: 'NTR', sans-serif;
-  font-weight: lighter;
-  font-size: 2em;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 1.8em;
+  letter-spacing: 1px;
 }
 .contenedor_2 .text p{
-  padding: 0 8% 55px 8%;
+  padding: 15px 8% 55px 8%;
   color: #666;
-  font-size: 1.1em;
-  font-family: 'Quicksand', sans-serif;
-  text-rendering: geometricPrecision;
-  font-weight: lighter;
+  font-size: 1em;
+  font-weight: 300;
+  font-family: 'Roboto', sans-serif;
   letter-spacing: 2px;
 }
 
@@ -227,19 +226,18 @@ header .icon-o span{
   text-align: center;
 }
 .texto h1{
-  font-family: 'NTR', sans-serif;
-  text-rendering: geometricPrecision;
-  font-size: 2.1em;
-  font-weight: lighter;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 2em;
   letter-spacing: 1px;
   word-spacing: 2px;
 }
 .texto p{
   padding-bottom: 25px;
-  font-size: 1.1em;
-  font-family: 'Quicksand', sans-serif;
-  text-rendering: geometricPrecision;
-  font-weight: lighter;
+  font-size: 1em;
+  font-weight: 300;
+  padding-top: 15px;
+  font-family: 'Roboto', sans-serif;
   letter-spacing: 2px;
   color: rgb(107, 107, 107);
   word-spacing: 2px;
@@ -256,8 +254,10 @@ header .icon-o span{
 }
 .contenedor_4 h1{
   color: white;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: lighter;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  letter-spacing: 1px;
+  word-spacing: 2px;
   font-size: 1.8em;
 }
 .ptr4{
@@ -272,7 +272,6 @@ header .icon-o span{
   background-color: black;
   padding: 15px 35px;
   font-family: 'Roboto', sans-serif;
-  text-rendering: geometricPrecision;
   border-radius: 25px;
 }
 /*-----------NOTE: marcas etc---------*/
@@ -281,8 +280,8 @@ header .icon-o span{
 }
 .contenedor_5 h1{
   text-align: center;
-  text-rendering: geometricPrecision;
-  font-family: 'Montserrat', sans-  serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
   letter-spacing: 2px;
   word-spacing: 2px;
   font-size: 1em;
@@ -320,7 +319,8 @@ header .icon-o span{
   padding-right: 15%;
 }
 .contenedor_8 h1{
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
   text-align: center;
   padding-bottom: 30px;
 }
@@ -351,10 +351,11 @@ header .icon-o span{
 .contenedor_8 .bash{
   background-color: rgb(24, 24, 24);
   padding: 20px 5px 200px 10px;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   color: rgb(115, 210, 22);
   display: flex;
-  font-size: 2.5em;
+  font-size: 2.2em;
 }
 .contenedor_8 .bash .console-container{
   position: relative;
@@ -370,10 +371,10 @@ header .icon-o span{
   height: 60vh;
 }
 .contenedor_7 h1{
-  font-family: 'NTR', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   font-size: 1.5em;
   padding-top: 30vh;
-  font-weight: lighter;
   text-align: center;
 }
 .contenedor_7 h1 span{
@@ -422,12 +423,9 @@ header .icon-o span{
   }
   .contenedor_0 .titles h1{
     color: white;
-    font-family: 'Quicksand', sans-serif;
-    font-weight: lighter;
+
     letter-spacing: 1px;
-    text-rendering: geometricPrecision;
     font-size: 2.1em;
-    font-weight: 100;
   }
   .contenedor_0 .text{
     padding-top: 10px;
@@ -437,11 +435,9 @@ header .icon-o span{
     padding-bottom: 25px;
   }
   .contenedor_0 .text h3{
-    font-family: 'Montserrat', sans-serif;
+
     letter-spacing: 1px;
-    text-rendering: geometricPrecision;
     font-size: 0.9em;
-    font-weight: 100;
   }
   .contenedor_0 a{
     margin-left: 5%;
@@ -506,18 +502,14 @@ header .icon-o span{
   }
 
   .texto h1{
-    font-family: 'NTR', sans-serif;
-    text-rendering: geometricPrecision;
+  
     font-size: 2.9em;
-    font-weight: lighter;
     letter-spacing: 1px;
     word-spacing: 2px;
   }
   .texto p{
     padding-bottom: 25px;
-    font-family: 'Montserrat', sans-serif;
-    text-rendering: geometricPrecision;
-    font-weight: lighter;
+  
     letter-spacing: 1px;
     color: rgb(107, 107, 107);
     word-spacing: 2px;
@@ -560,7 +552,7 @@ header .icon-o span{
     padding-right: 15%;
   }
   .contenedor_8 h1{
-    font-family: 'Quicksand', sans-serif;
+  
     text-align: center;
     padding-bottom: 30px;
   }
@@ -596,10 +588,9 @@ header .icon-o span{
   height: 70vh;
 }
 .contenedor_7 h1{
-  font-family: 'NTR', sans-serif;
+
   font-size: 3em;
   padding-top: 30vh;
-  font-weight: lighter;
   text-align: center;
 }
 .contenedor_7 h1 span{
@@ -643,12 +634,9 @@ header .icon-o span{
   }
   .contenedor_0 .titles h1{
     color: white;
-    font-family: 'Quicksand', sans-serif;
-    font-weight: lighter;
+
     letter-spacing: 1px;
-    text-rendering: geometricPrecision;
     font-size: 2.9em;
-    font-weight: 100;
   }
   .contenedor_0 .text{
     text-align: inherit;
@@ -659,19 +647,16 @@ header .icon-o span{
     padding-bottom: 25px;
   }
   .contenedor_0 .text h3{
-    font-family: 'Montserrat', sans-serif;
+
     letter-spacing: 1px;
-    text-rendering: geometricPrecision;
-    font-size: 1.2em;
-    font-weight: 100;
+    font-size: 1em;
   }
   .contenedor_0 a{
     margin-left: 8%;
     text-align: inherit;
     color: white;
     font-size: 0.9em;
-    font-family: 'Montserrat', sans-serif;
-    text-rendering: geometricPrecision;
+
     letter-spacing: 2px;
   }
   .contenedor_0 a span{
@@ -681,8 +666,7 @@ header .icon-o span{
     padding: 10px 10px;
     margin-right: 5px;
     font-size: 0.8em;
-    font-family: 'Montserrat', sans-serif;
-    text-rendering: geometricPrecision;
+
     letter-spacing: 2px;
   }
 
@@ -697,12 +681,12 @@ header .icon-o span{
   }
   .contenedor_1 p{
     padding-left: 20%;
-    font-family: 'Montserrat', sans-serif;
+
     padding-right: 20%;
     letter-spacing: 1px;
     word-spacing: 2px;
     line-height: 23px;
-    padding-bottom: 80px;
+    padding-bottom: 45px;
   }
 
 
@@ -722,19 +706,15 @@ header .icon-o span{
     font-size: 3em;
   }
   .contenedor_2 .text h2{
-    text-rendering: optimizeLegibility;
-    font-family: 'NTR', sans-serif;
-    font-weight: lighter;
-    font-size: 2em;
+    font-size: 1.4em;
   }
   .contenedor_2 .text p{
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-top: 20px;
+    padding-left: 22%;
+    padding-right: 22%;
     color: #666;
-    font-size: 1.1em;
-    font-family: 'Quicksand', sans-serif;
-    text-rendering: geometricPrecision;
-    font-weight: lighter;
+    font-size: 1em;
+    font-weight: 300;
     letter-spacing: 2px;
   }
 
@@ -759,7 +739,6 @@ header .icon-o span{
   }
   .texto h1{
     font-size: 2.9em;
-    font-weight: lighter;
     letter-spacing: 1px;
     word-spacing: 2px;
   }
@@ -807,10 +786,10 @@ header .icon-o span{
   height: 70vh;
 }
 .contenedor_7 h1{
-  font-family: 'NTR', sans-serif;
+
   font-size: 5em;
   padding-top: 30vh;
-  font-weight: lighter;
+
   text-align: center;
 }
 .contenedor_7 h1 span{
@@ -863,19 +842,16 @@ header .icon-o span{
     font-size: 3em;
   }
   .contenedor_2 .text h2{
-    text-rendering: optimizeLegibility;
-    font-family: 'NTR', sans-serif;
-    font-weight: lighter;
-    font-size: 2em;
+    letter-spacing: 1px;
+    font-size: 1.6em;
   }
   .contenedor_2 .text p{
     padding-left: 20%;
     padding-right: 20%;
     color: #666;
-    font-size: 1.1em;
-    font-family: 'Quicksand', sans-serif;
-    text-rendering: geometricPrecision;
-    font-weight: lighter;
+    font-size: 1em;
+
+  
     letter-spacing: 2px;
   }
 
